--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
             right: 10px;
         }
         .set__box{
-            width: 60%;
-            height: 50vh;
+            width: 80%;
+            height: 80vh;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
             padding: 20px;
             position: fixed;
-            left: 20%;
-            top: 25vh;
+            left: 10%;
+            top: 10vh;
             font-size: 10px;
          
            box-shadow: 0 0 5px #999;
@@ -122,6 +122,15 @@
             font-size: 12px;
         }
         input{
+            cursor: pointer;
+        }
+        .set__box__btns__btn{
+            border:  none;
+            font-size: 16px;
+            background-color: green;
+            color: white;
+            border-radius: 10px;
+            padding: 10px 15px;
             cursor: pointer;
         }
     </style>
@@ -152,7 +161,7 @@
         Швидкість відтворення
     <input type="range" id="shinp"min="1" max="50" value="10"></div></div>
     <img class="set" id="set" src="./img/settings.png"></img>
-    <div class="set__box" id="set__box">
+    <div class="set__box" id="set__box" style="display: flex;">
         <h1 class="h1__set">Settings</h1>
         <h1>Зберегти - S</h1>
         <h1>Очисти - C</h1>
@@ -164,11 +173,70 @@
         <h1>Відкрити і закрити кольори - 4</h1>
         <h1>Відкрити і закрити розмір пензля - 5</h1>
         <h1>Відкрити і закрити швидкість відтворення - 6</h1>
+        <div class="set__box__btns">
+            <button class="set__box__btns__btn" id="set__box__btns__1">Не показувати при наступному заході</button>
+            <button class="set__box__btns__btn" id="set__box__btns__2">Показати при наступному заході</button>
+        </div>
     </div>
     <script>
+         let seti=1;
+         console.log(document.cookie)
+// document.cookie='IsUserWantToSeeHintForPaintCanvas=true; max-age='+3600*24*7 //7 днів
+ if(getCookie('IsUserWantToSeeHintForPaintCanvas')=='false'){
+    canvas.style.filter = 'blur(0px)'
+    bot.style.filter = 'blur(0px)'
+set__box.style.display = 'none'
+seti=0
+ }else{
+        canvas.style.filter = 'blur(5px)'
+    bot.style.filter = 'blur(5px)'
+set__box.style.display = 'flex'
+ }
+set__box__btns__1.onclick =function(){
+    document.cookie='IsUserWantToSeeHintForPaintCanvas=false; max-age='+3600*24*7 //7 днів
+    console.log(document.cookie)
+        canvas.style.filter = 'blur(0px)'
+    bot.style.filter = 'blur(0px)'
+set__box.style.display = 'none'
+seti=0
+}
+set__box__btns__2.onclick =function(){
+    document.cookie='IsUserWantToSeeHintForPaintCanvas=true; max-age='+3600*24*7 //7 днів
+    console.log(document.cookie)
+        canvas.style.filter = 'blur(0px)'
+    bot.style.filter = 'blur(0px)'
+set__box.style.display = 'none'
+seti=0
+}
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  let canv = document.getElementById('canvas')
  let ctx =canv.getContext('2d')
-
+ let filli=0;
  cursorColor.style.boxShadow ='0 0 5px black'
  penzl.style.backgroundColor='rgba(181,181,181,0.4)'
  if(localStorage.getItem('actinstr')==1){
@@ -176,8 +244,6 @@
    filler.style.backgroundColor='rgba(181,181,181,0.4)'
     eraser.style.backgroundColor=bgcol
     penzl.style.backgroundColor=bgcol
-}else{
-
 }
 
  let col ='black'
@@ -208,9 +274,9 @@ let bgcol ='white'
 canv.style.backgroundColor = bgcol
  canv.width =window.innerWidth
  canv.height = window.innerHeight;
- let seti=0;
+
  let drawi=1; 
- let filli=0;
+
  let coldosturan=col
  canv.addEventListener('mousedown' , function(){
      isMouseDown =true
@@ -480,7 +546,7 @@ shinp.onchange = function(){
     repl=shinp.value
    
 }
-set__box.style.display = 'none'
+
 set.onclick= function(){
 if(seti==0){
     seti=1;
@@ -540,6 +606,13 @@ canv.onclick =  function(){
         shrepl.style.backgroundColor=bgcol
 //    filli=0;
     }
+}
+function getCookie(name){
+ let value=`; ${document.cookie}`
+ let parts=value.split(`; ${name}=`)
+ if(parts.length==2){
+    return parts.pop().split(';').shift()
+ }
 }
     </script>
 </body>
